# eccas-s2s

./: .gitignore  LICENSE  README.md  environment.lock.yml  environment.yml  pyproject.toml
eccas_s2s/: __init__.py  config.py  pipeline.py
eccas_s2s/calibration/: __init__.py
eccas_s2s/core/: __init__.py  data.py  processing.py
eccas_s2s/io/: __init__.py  _base.py  c3s.py  chirps.py  era5.py  iridl.py  nmme.py  obs_stations.py  tamsat.py
eccas_s2s/models/: __init__.py  base.py
eccas_s2s/monitoring/: __init__.py
eccas_s2s/obs/: __init__.py
eccas_s2s/predictors/: __init__.py
eccas_s2s/products/: __init__.py
eccas_s2s/validate/: __init__.py  verification.py
eccas_s2s/viz/: __init__.py  plotting.py
scripts/: rebuild_multimodel.py  run_forecast.py  run_verification.py
tests/: test_c3s.py  test_nmme.py  test_obs_sources.py  test_obs_stations.py  test_processing.py
